--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         </div>
     </nav>
 
-      <main>
-         
+      <main> 
          <div id="painel">
             <h3 id="subtitle">Itens mais produrados</h3>
             <div id="secaoreplicas">
@@ -150,6 +149,8 @@
                </a>
                </a>
             </div>
+            <aside class="lateralcontainer">
+            </aside>
          </div>
       </main>
       
