--- a/Paginas/recuperasenhaconfirmacao.html
+++ b/Paginas/recuperasenhaconfirmacao.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../Estilos/index.css">
 </head>
 
-<body>
+<body class="background">
     <header>
         <div id="title">
             <h1>(Loja Kalibur)</h1>
