--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swords</title>
-    <link rel="stylesheet" href="Estilos/index.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/paisagem.css" media="screen and (orientation : landscape)">
+    <link rel="stylesheet" href="styles/retrato.css" media="screen and (orientation : portrait)">
 </head>
 
 <body class="background">
@@ -35,7 +37,6 @@
                <div class="replicas" id="replica2"> </div>
                <div class="replicas" id="replica3"> </div>
                <div class="replicas" id="replica4"> </div>
-               <div class="replicas" id="replica5"> </div>
             </div>
          </div>
          <div id="container">
@@ -52,13 +53,14 @@
             </div>
             <div class="direitacontainer">
                <h3 id="subtitle">Últimos produtos cadastrados</h3>
-               <a class="produto">
+            <a class="produtorow">
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
                Espada Aço Zelda
                <br>
                <br>
                Materiais: Acabamento bronze,chapa de aço,pomo de madeira.
+               </a>
                </a>
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
@@ -68,7 +70,7 @@
                Materiais: Acabamento bronze,chapa de aço,pomo de madeira.
                </a>
                </a>
-               <a class="produto">
+               <a class="produtorow">
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
                Espada Aço Zelda 002
@@ -84,7 +86,7 @@
                Materiais: Acabamento bronze,chapa de aço,pomo de madeira..
                </a>
                </a>
-               <a class="produto">
+               <a class="produtorow">
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
                Espada Aço Zelda 004
@@ -100,7 +102,7 @@
                Materiais: Acabamento bronze,chapa de aço,pomo de madeira.
                </a>
                </a>
-               <a class="produto">
+               <a class="produtorow">
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
                Espada Aço Zelda 006
@@ -116,7 +118,7 @@
                Materiais: Acabamento bronze,chapa de aço,pomo de madeira.
                </a>
                </a>
-               <a class="produto">
+               <a class="produtorow">
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
                Espada Aço Zelda 008
@@ -132,7 +134,7 @@
                Materiais: Acabamento bronze,chapa de aço,pomo de madeira.
                </a>
                </a>
-               <a class="produto">
+               <a class="produtorow">
                <a href="#"> <img class="iconproduto" src="Imagens/swordlinkzelda.jpg"></a>
                <a href="#" class="icondescricao">
                Espada Aço Zelda 010
