--- a/pages/recuperasenha2.html
+++ b/pages/recuperasenha2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swords</title>
-    <link rel="stylesheet" href="../Estilos/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body class="background">
@@ -20,9 +20,9 @@
         <div id="transparente">
             <div class="menu">
                 <a id="iconmenu">()</a><a id="estilo" href="../index.html">Loja</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../Paginas/Entrar.html">Login</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../Paginas/recuperasenha.html">Alterar senha</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../Paginas/novousuario.html">Fazer cadastro</a>
+                <a id="iconmenu">()</a><a id="estilo" href="../pagess/Entrar.html">Login</a>
+                <a id="iconmenu">()</a><a id="estilo" href="../pagess/recuperasenha.html">Alterar senha</a>
+                <a id="iconmenu">()</a><a id="estilo" href="../pagess/novousuario.html">Fazer cadastro</a>
             </div>
         </div>
     </nav>
