--- a/pages/recuperasenhaconfirmacao.html
+++ b/pages/recuperasenhaconfirmacao.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swords</title>
-    <link rel="stylesheet" href="../Estilos/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body class="background">
@@ -20,9 +20,9 @@
         <div id="transparente">
             <div class="menu">
                 <a id="iconmenu">()</a><a id="estilo" href="../index.html">Loja</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../Paginas/Entrar.html">Login</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../Paginas/recuperasenha.html">Alterar senha</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../Paginas/novousuario.html">Fazer cadastro</a>
+                <a id="iconmenu">()</a><a id="estilo" href="../pages/Entrar.html">Login</a>
+                <a id="iconmenu">()</a><a id="estilo" href="../pages/recuperasenha.html">Alterar senha</a>
+                <a id="iconmenu">()</a><a id="estilo" href="../pages/novousuario.html">Fazer cadastro</a>
             </div>
         </div>
     </nav>
@@ -30,7 +30,7 @@
     <main>
         <p id="confirmacao">Enviamos um link para o seu e-mail. Acesse o link que enviamos ou clique no link abaixo se deseja reenviar.</p>
         <br>
-        <p id="right"><button id="reenviar"><a href="../Paginas/recuperasenha.html">Reenviar e-mail</a></button></p>
+        <p id="right"><button id="reenviar"><a href="../pages/recuperasenha.html">Reenviar e-mail</a></button></p>
     </main>
     <footer></footer>
 </body>
