--- a/pages/recuperasenha.html
+++ b/pages/recuperasenha.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swords</title>
-    <link rel="stylesheet" href="../css/index.css">
-</head>
-
+<!doctype html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Shop Pagina 2</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+      <link rel="stylesheet" href="../css/index.css">
+   </head>
+</html>
 <body class="background">
-    <header>
-        <div id="title">
-            <h1>(Loja Kalibur)</h1>
-        </div>
-    </header>
-
-    <nav class="bg">
-        <div id="transparente">
-            <div class="menu">
-                <a id="iconmenu">()</a><a id="estilo" href="../index.html">Loja</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../pages/Entrar.html">Login</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../pages/recuperasenha.html">Alterar senha</a>
-                <a id="iconmenu">()</a><a id="estilo" href="../pages/novousuario.html">Fazer cadastro</a>
-            </div>
-        </div>
-    </nav>
+   <header>
+      <div id="title">
+         <h1>(Loja Kalibur)</h1>
+      </div>
+   </header>
+   <nav class="bg">
+      <div id="transparente">
+         <div class="menu">
+            <b>()</b><a id="estilo" href="/index.html">Loja</a>
+            <b>()</b><a id="estilo" href="/pages/Entrar.html">Login</a>
+            <b>()</b><a id="estilo" href="/pages/recuperasenha.html">Alterar senha</a>
+            <b>()</b><a id="estilo" href="/pages/novousuario.html">Cadastro</a>
+            <b>()</b><button id=modalButton>Perfil</button>            
+         </div>
+      </div>
+   </nav>
     <main>
     <div id="backimage">
         <h2>Recuperar:</h2>
@@ -51,5 +50,39 @@
     </div>
     </main>
     <footer></footer>
+          <!--Bem vindo ao HTML5 teacher-->
+      <dialog id="myDialog">
+         <div class="col-md-4">
+            <div class="card p-3 mb-2">
+               <div class="d-flex justify-content-between">
+                  <div class="d-flex flex-row align-items-center">
+                     <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
+                     <div class="ms-2 c-details">
+                        <h6 class="mb-0">UserCalibur</h6>
+                        <span>Nível - 30<br>Major</span>
+                     </div>
+                  </div>
+                  <div class="badge"> <span>Espadachim</span> </div>
+               </div>
+               <div class="mt-5">
+                  <h5 class="heading">Favoritos do Arsenal</h5>
+                  <div class="mt-5">
+                     <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                     </div>
+                     <div class="mt-3"> <span class="text1">32 Produtos Avaliados <span class="text2">de 50 Aquisições</span></span> </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </dialog>
+
+      <!-- Bibliotecas JavaScript -->
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+      <!-- Scripts personalizados -->
+      <script src="/js/modal.js"></script> 
+      <script src="/js/badge.js"></script>
 </body>
 </html>
