--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
       <!--Bem vindo ao HTML5 teacher-->
       <dialog id="myDialog">
-         <div class="col-md-4">
+         <div class="col">
             <div class="card p-3 mb-2">
                <div class="d-flex justify-content-between">
                   <div class="d-flex flex-row align-items-center">
@@ -207,8 +207,9 @@
                         <span>Nível - 30<br>Major</span>
                      </div>
                   </div>
-                  <div class="badge"> <span>Espadachim</span> </div>
+                  <button id="closeButton">X</button>
                </div>
+               <div class="badge"> <span>Espadachim</span></div>
                <div class="mt-5">
                   <h5 class="heading">Favoritos do Arsenal</h5>
                   <div class="mt-5">
