--- a/pages/novousuario.html
+++ b/pages/novousuario.html
@@ -67,9 +67,9 @@
       </main>
       
       <footer></footer>
-      <!--Bem vindo ao HTML5 teacher-->
-      <dialog id="myDialog">
-         <div class="col-md-4">
+      <!--Modal com HTML5-->
+      <dialog id="myDialog" aria-label="Janela do usuário" role="Modal">
+         <div class="col">
             <div class="card p-3 mb-2">
                <div class="d-flex justify-content-between">
                   <div class="d-flex flex-row align-items-center">
@@ -79,13 +79,14 @@
                         <span>Nível - 30<br>Major</span>
                      </div>
                   </div>
-                  <div class="badge"> <span>Espadachim</span> </div>
+                  <button id="closeButton" aria-label="Fechar janela" role="button">X</button>
                </div>
+               <div class="badge"> <span>Espadachim</span></div>
                <div class="mt-5">
                   <h5 class="heading">Favoritos do Arsenal</h5>
                   <div class="mt-5">
-                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                     <div class="progress" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar" style="width: 50%"></div>
                      </div>
                      <div class="mt-3"> <span class="text1">32 Produtos Avaliados <span class="text2">de 50 Aquisições</span></span> </div>
                   </div>
