--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
       <!--Carrosel Container-->
       <div class="container">
-         <div id="carouselheader" class="carousel slide d-block" data-bs-ride="carousel">
+         <div id="carouselheader" class="carousel slide d-block" data-bs-ride="carousel" aria-label="carrosel de imagens">
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="d-flex justify-content-between">
@@ -61,7 +61,7 @@
       <section class="py-1">
          <div class="container px-4 mt-4">
             <div class="row gx-4 row-cols-2 row-cols-md-3 row-cols-xl-5 justify-space-around">
-               <div class="col me-3 ms-0" id="menuleft">
+               <div class="col me-3 ms-0" id="menuleft" aria-label="menu lateral esquerdo em lista">
                   <ul class="categorias">
                      <h3 id="subtitle">Faça sua escolha!</h3>
                      <li><button><a href="pages/swords.html">Espadas</a></button></li>
@@ -207,7 +207,7 @@
                         <span>Nível - 30<br>Major</span>
                      </div>
                   </div>
-                  <button id="closeButton" aria-label="Fechar janela" role="button">X</button>
+                  <button id="closeButton" aria-label="Fechar janela" role="button">x</button>
                </div>
                <div class="badge"> <span>Espadachim</span></div>
                <div class="mt-5">
