--- a/pages/novousuario.html
+++ b/pages/novousuario.html
@@ -79,7 +79,7 @@
                         <span>Nível - 30<br>Major</span>
                      </div>
                   </div>
-                  <button id="closeButton" aria-label="Fechar janela" role="button">X</button>
+                  <button id="closeButton" aria-label="Fechar janela" role="button">x</button>
                </div>
                <div class="badge"> <span>Espadachim</span></div>
                <div class="mt-5">
